reformatting links as external

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migrating_the_infrastructure.adoc
@@ -5,7 +5,7 @@ Migrating the infrastructure involves the following key tasks:
 
 . Mapping the resources of your source environment to your target environment (xref:Creating_an_infrastructure_mapping[])
 
-. Fulfilling the following prerequisites if they apply to your migration plan:
+. Check the following prerequisites to see whether they apply to your migration:
 
 .. Creating a CSV file (xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[])
 * Mandatory, if you are migrating source virtual machines that have been migrated in the past
@@ -18,8 +18,8 @@ Migrating the infrastructure involves the following key tasks:
 * Mandatory, if you are creating a `RHEL premigration` Ansible playbook
 * Optional, for automated premigration and postmigration tasks
 
-. Creating a migration plan (xref:Creating_a_migration_plan[])
-. Running a migration plan immediately or in the future (xref:Running_a_migration_plan[])
+. Creating a migration plan (xref:Creating_and_running_a_migration_plan[])
+. Running a migration plan (xref:Creating_and_running_a_migration_plan[])
 
 [IMPORTANT]
 ====
@@ -28,5 +28,4 @@ Currently, IMS supports only cold migration. Virtual machines are powered off gr
 
 include::modules/proc_Creating_an_infrastructure_mapping.adoc[leveloffset=+1]
 include::modules/con_Migration_plan_prerequisites.adoc[leveloffset=+1]
-include::modules/proc_Creating_a_migration_plan.adoc[leveloffset=+1]
-include::modules/proc_Running_a_migration_plan.adoc[leveloffset=+1]
+include::modules/proc_Creating_and_running_a_migration_plan.adoc[leveloffset=+1]
