--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
@@ -1,9 +1,9 @@
 [[Planning_the_migration]]
 = Planning the migration
 
-During the planning phase, formulate a specific migration goal, for example, "I want to migrate 2000{nbsp}virtual machines, with 200{nbsp}TB of data, in less than 6 months".
+During the planning phase, you will formulate a specific migration goal, for example, "I want to migrate 2000{nbsp}virtual machines, with 200{nbsp}TB of data, in less than 6 months".
 
-The following can help you plan the steps toward that goal:
+The following information can help you plan your migration:
 
 * Questions about resources, guest operating systems, and migration duration (xref:Questions_to_ask_before_migration[])
 * Recommendations for minimizing the impact of the migration on your environment (xref:Recommendations_for_migration[])
