--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,21 +1,23 @@
 [id='Troubleshooting']
 = Troubleshooting
 
-If there are migration errors, you can do the following:
+If a migration failure was caused by external factors, such as network disruption, you can retry the migration (xref:Retrying_a_failed_migration_plan[]).
 
-* xref:Retrying_a_failed_migration_plan[Retry the migration plan], if the failure was caused by external factors, such as network disruption.
+To troubleshoot migration errors:
 
-* xref:Migration_logs[Check the migration logs].
+* Check the migration logs (xref:Migration_logs[])
 
-* Check the following xref:Common_issues_and_mistakes[common issues and mistakes]:
+* Check the following common issues and mistakes:
 
-** xref:Infrastructure_mapping_errors[Infrastructure mapping errors]
-** xref:Migration_plan_errors[Migration plan errors]
-** xref:Virtual_machine_migration_failure[Specific virtual machine migration failure]
+** Infrastructure mapping errors (xref:Infrastructure_mapping_errors[])
+** Migration plan errors (xref:Migration_plan_errors[])
+** Virtual machine migration errors (xref:Virtual_machine_migration_errors[])
 
-* See xref:Known_issues[] for information about obtaining critical updates and about issues that will be addressed in a future release.
+See xref:Known_issues[] for information about obtaining critical updates and about issues that will be addressed in a future release.
 
 include::modules/proc_Retrying_a_failed_migration_plan.adoc[leveloffset=+1]
 include::modules/ref_Migration_logs.adoc[leveloffset=+1]
-include::modules/assembly_Common_issues_and_mistakes.adoc[leveloffset=+1]
+include::modules/ref_Infrastructure_mapping_errors.adoc[leveloffset=+1]
+include::modules/ref_Migration_plan_errors.adoc[leveloffset=+1]
+include::modules/ref_Virtual_machine_migration_failure.adoc[leveloffset=+1]
 include::modules/ref_Known_issues.adoc[leveloffset=+1]
