--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
@@ -10,12 +10,12 @@ CloudForms requires a minimum of one Ansible playbook repository, one playbook, 
 [id="Creating_an_Ansible_service_catalog_item"]
 .Procedure
 
-. Enable the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/managing_providers/automation_management_providers#enabling-embedded-ansible-server-role[`Embedded Ansible` role].
+. Enable the `Embedded Ansible` role (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#enabling-embedded-ansible-server-role[Enabling the Embedded Ansible Server Role] in _Red Hat CloudForms: Managing Providers_).
 
-. Create an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-inside[Ansible playbook repository].
+. Add an Ansible playbook repository (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#adding-a-playbook-repository[Adding a Playbook Repository] in _Red Hat CloudForms: Managing Providers_).
 
-. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-credentials[Ansible credentials] for your virtual machines.
+. Add the Ansible credentials for your virtual machines (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-credentials[Credentials] in _Red Hat CloudForms: Managing Providers_).
 
-. Add a playbook as an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/provisioning_virtual_machines_and_instances/#create-playbook-service-catalog-item[Ansible service catalog item].
+. Add a playbook as an Ansible service catalog item (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/provisioning_virtual_machines_and_instances/#create-playbook-service-catalog-item[Creating an Ansible Playbook Service Catalog Item] in _Red Hat CloudForms: Provisioning Virtual Machines and Instances_).
 
-You will xref:Advanced_options_screen[select the playbooks and the virtual machines on which they run] when you create the migration plan.
+You will select the playbooks and the virtual machines on which they run in the xref:Advanced_options_screen[Advanced Options screen] when you create the migration plan (xref:Creating_and_running_a_migration_plan[]).
