--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
@@ -7,21 +7,22 @@ You select, authenticate, and configure your conversion hosts in CloudForms.
 
 These procedures assume that you know the following:
 
-* xref:Deciding_how_many_conversion_hosts_to_create[How many conversion hosts you require]
-* Whether to use xref:Choosing_vddk_or_ssh_transformation[VDDK or SSH]
+* How many conversion hosts you require (xref:Deciding_how_many_conversion_hosts_to_create[])
+* Whether to use VDDK or SSH (xref:Choosing_vddk_or_ssh_transformation[])
 
 .Prerequisite for VDDK
 [id='VDDK_only_Downloading_and_copying_VDDK']
 
 * Download the VMware Virtual Disk Development Kit:
 +
-. Go to the link:https://www.vmware.com/support/pubs/[VMware Documentation site], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
+. Navigate to link:https://www.vmware.com/support/pubs/[].
+. Click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
 . Click `Latest Releases` and select the latest VDDK release.
-. Download and save the VDDK package, +VMware-vix-disklib-_version_.x86_64.tar.gz+.
+. Download the VDDK package, +VMware-vix-disklib-_version_.x86_64.tar.gz+, and record its path for the conversion host configuration.
 
 .Procedure
 
-. Click menu:Compute[Migration > Migration Settings].
+. In CloudForms, click menu:Compute[Migration > Migration Settings].
 . In the *Conversion Hosts* tab, click *Configure Conversion Host*.
 . Perform the following procedures in the *Configure Conversion Host* wizard:
 +
@@ -52,7 +53,7 @@ These procedures assume that you know the following:
 
 . *SSH:* Click *Browse* to browse to the VMware hypervisors SSH key or paste it in the *VMware hypervisors SSH key* field.
 +
-*VDDK:* Paste the path of the xref:VDDK_only_Downloading_and_copying_VDDK[VDDK package] in the *VDDK library path* field and click *Validate*.
+*VDDK:* Paste the path of the VDDK package in the *VDDK library path* field and click *Validate*.
 
 . Click *Configure*.
 |*Results*
