--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
@@ -1,7 +1,7 @@
 [id="Creating_a_rhel_premigration_playbook"]
 = Creating a `RHEL premigration` playbook
 
-If you are migrating virtual machines running RHEL or other Linux-based operating system, create a `RHEL premigration` playbook that calls the Ansible link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[`ims.rhel_premigration` role].
+If you are migrating virtual machines running RHEL or other Linux-based operating system, create a `RHEL premigration` playbook that calls the Ansible `ims.rhel_premigration` role (see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[] for documentation).
 
 The `ims.rhel_premigration` role performs the following tasks on the source virtual machine:
 
@@ -23,4 +23,4 @@ The `ims.rhel_premigration` role assumes that either the `rhel-6-server-rpms` or
     - role: ims.rhel_pre_migration
 ----
 
-You will select this playbook as a xref:Advanced_options_screen[premigration playbook service] when you create the migration plan.
+You will select this playbook as a premigration playbook service in the xref:Advanced_options_screen[Advanced options screen] when you create the migration plan (xref:Creating_and_running_a_migration_plan[]).
