--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -31,7 +31,7 @@ The infrastructure mapping maps your source resources to target resources.
 .<a|. Select a source cluster from the drop-down list.
 . Select a source datastore and a target Red Hat Virtualization datastore or OpenStack Platform volume type.
 +
-*OpenStack Platform only:* If the target datastore is missing, see xref:OpenStack_storage_not_detected[Storage not detected].)
+*OpenStack Platform only:* If the target datastore is missing, see xref:OpenStack_storage_not_detected[Storage not detected] in xref:Infrastructure_mapping_errors[].
 . Click *Add Mapping*. You can map additional datastores.
 . Click *Next*.
 
@@ -47,12 +47,10 @@ The infrastructure mapping maps your source resources to target resources.
 |*Results*
 .<a|Click *Close*. Your infrastructure mapping is saved in menu:Compute[Migration > Infrastructure Mappings].
 
-If error messages appear, see xref:Infrastructure_mapping_errors[Infrastructure mapping errors].
-|===
-
 [IMPORTANT]
 ====
-If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have xref:Infrastructure_mapping_missing_resources[missing resource errors]. You must re-create the infrastructure mapping.
+If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have missing resource errors (see xref:Infrastructure_mapping_errors[]). You must re-create the infrastructure mapping.
 ====
+|===
 
 After you have created a successful infrastructure mapping, review the migration plan prerequisites to see whether they apply to your migration (xref:Migration_plan_prerequisites[]).
