--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -3,9 +3,9 @@
 [id="Preparing_the_vmware_source_environment"]
 = Preparing the source environment
 
-Prepare the source network and virtual machines for migration.
+Prepare the source environment's network and virtual machines for migration.
 
-.Network
+.Preparing the source network
 
 * Extend the source network to the target environment.
 
@@ -16,7 +16,7 @@ The network configuration must not be changed in any way during the migration.
 Ensure that IP addresses, VLANs, and other network configurations are not changed before or after migration, because the conversion process preserves the source virtual machine MAC addresses.
 ====
 
-.Virtual machines
+.Preparing the source virtual machines
 
 . Unmount mounted ISO/CDROM disks.
 
@@ -24,7 +24,7 @@ Ensure that IP addresses, VLANs, and other network configurations are not change
 
 . Check that each NIC has no more than one IPv4 and/or one IPv6 address.
 
-. Install link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[VMware Tools] to capture IP addresses.
+. Install VMware Tools to capture IP addresses (see link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[Installing VMware Tools] for instructions).
 
 . Check that source virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). *Special characters and spaces are not permitted.*
 
