--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_a_failed_migration_plan.adoc
@@ -3,9 +3,7 @@
 [id="Retrying_a_failed_migration_plan"]
 = Retrying a failed migration plan
 
-If the cause of the failed migration was external (for example, network disruption), you can retry the migration.
-
-.Procedure
+If a migration plan fails because of external factors, you can retry the migration:
 
 . Delete newly created target virtual machines or instances, if any, to avoid name conflicts with the migrating VMware virtual machines.
 . Delete newly created disks in the target datastore to free up space.
