--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
@@ -1,24 +1,24 @@
 // Module included in the following assemblies:
 // assembly_Troubleshooting.adoc
 [id="Migration_logs"]
-= Migration logs
+= Checking migration logs
 
-Check the logs to troubleshoot errors.
+You can check the migration logs and the CloudForms automation log for errors.
 
-.Accessing the migration logs
+.Downloading the migration logs
 
 . In CloudForms, click menu:Compute[Migration Plans > Migration Plans Complete].
 . Click a migration plan name to go to the details view.
 . Click *Download Log* of a virtual machine and select a log from the dropdown list:
 
 * *Premigration log:* This option only appears if a premigration playbook is used.
-* *Migration log:* Debug log of `virt-v2v`. It tracks the core of the virtual machine process, including `libguestfs` traces and disk migration details.
-* *Virt-v2v-wrapper log:* Log of the daemonizing wrapper for `virt-v2v`. It traces the orchestration of the virtual machine conversion on the conversion host, including disk migration percentages and `virt-v2v` error reporting.
+* *Migration log:* Debug log of `virt-v2v`. This log tracks the core of the virtual machine process, including `libguestfs` traces and disk migration details.
+* *Virt-v2v-wrapper log:* Log of `virt-v2v-wrapper`, the daemonizing wrapper for `virt-v2v`. This log traces the orchestration of the virtual machine conversion on the conversion host, including disk migration percentages and `virt-v2v` error reporting.
 * *Postmigration log:* This option only appears if a postmigration playbook is used.
 
 [IMPORTANT]
 ====
-Both the Migration log (`virt-v2v`) and the Virt-v2v-wrapper log are required for bug analysis. If you open a link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support call], you should provide both logs.
+Both the Migration log (`virt-v2v`) and the `virt-v2v-wrapper` log are required for bug analysis. If you open a link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support call], you should provide both logs.
 ====
 
 [id="CloudForms_log"]
@@ -27,4 +27,4 @@ Both the Migration log (`virt-v2v`) and the Virt-v2v-wrapper log are required fo
 This log traces the orchestration of the virtual machine migration in CloudForms.
 
 . Log into the CloudForms machine using SSH.
-. Save the `/var/www/miq/vmdb/log/automation.log` file.
+. Copy and save the `/var/www/miq/vmdb/log/automation.log` file.
