--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
@@ -8,10 +8,10 @@
 
 ** Virtual machines being migrated for the first time: Check that the datastores and networks of the source virtual machines have been added to the Infrastructure Mapping.
 
-** Virtual machines have been migrated in the past: Use a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] to add the virtual machines to the migration plan.
+** Virtual machines have been migrated in the past: Use a CSV file to add the virtual machines to the migration plan (xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[]).
 
 [id="Virtual_machines_cannot_be_added_with_CSV_file"]
-* Virtual machines cannot be added to the migration plan with a CSV file: Check the xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file's format and fields]. Create a new migration plan with the updated CSV file.
+* Virtual machines cannot be added to the migration plan with a CSV file: Check the CSV file format and fields  (xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[]). Create a new migration plan with the updated CSV file.
 
 [id="Denied_state_error"]
-* `Denied State`: If a migration plan fails immediately and the migration plan displays a *Denied State* error message, check the conversion host configuration in menu:Compute[Migration > Migration Settings]. Cancel the migration plan and xref:Retrying_a_failed_migration_plan[retry it].
+* `Denied State`: If a migration plan fails immediately and the migration plan displays a *Denied State* error message, check the conversion host configuration in menu:Compute[Migration > Migration Settings]. Cancel the migration plan and retry it (xref:Retrying_a_failed_migration_plan[]).
