--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Recommendations_for_migration.adoc
@@ -35,14 +35,14 @@ The following recommendations will minimize the impact of the migration on your 
 
 .Deploying conversion hosts
 
-* Create an appropriate number of conversion hosts. See xref:Deciding_how_many_conversion_hosts_to_create[].
-* Choose the best datapath transformation option for your environment. See xref:Choosing_vddk_or_ssh_transformation[].
+* Create an appropriate number of conversion hosts (xref:Deciding_how_many_conversion_hosts_to_create[]).
+* Choose the best datapath transformation option for your environment (xref:Choosing_vddk_or_ssh_transformation[]).
 * Deploy OpenStack Platform conversion hosts on multiple hypervisors.
 
 .Controlling the migration process
 
 * Create multiple migration plans for finer control over the migration process.
-* Perform test migrations with different xref:Changing_the_maximum_number_of_concurrent_migrations[maximum numbers of concurrent migrations] to assess the capabilities of your environment's infrastructure.
+* Perform test migrations with different maximum numbers of concurrent migrations to assess the capabilities of your environment's infrastructure (xref:Changing_the_maximum_number_of_concurrent_migrations[]).
 
 [id="Deciding_how_many_conversion_hosts_to_create"]
 == Deciding how many conversion hosts to create
@@ -51,14 +51,14 @@ The number of conversion hosts you create depends on the size of your migration.
 
 Multiple conversion hosts provide load-balancing and better performance, even for small migrations.
 
-Conversion hosts and providers are limited to ten concurrent migrations, unless you xref:Changing_the_maximum_number_of_concurrent_migrations[change the default maximum number of concurrent migrations].
+Conversion hosts and providers are limited to ten concurrent migrations, unless you change the default maximum number of concurrent migrations (xref:Changing_the_maximum_number_of_concurrent_migrations[]).
 
 Test your environment thoroughly before the migration to determine how many migrations it can support, with `x` number of conversion hosts and `y` maximum number of concurrent migrations per host, without negative effects.
 
 [id="Choosing_vddk_or_ssh_transformation"]
 == Choosing a datapath transformation option: VDDK or SSH
 
-You can use either VMware Virtual Disk Development kit (VDDK) or SSH for your migration. The choice is determined by the number of virtual machines you intend to migrate and the capabilities of your infrastructure. The following table compares these options.
+You will configure your conversion hosts to use either the VMware Virtual Disk Development kit (VDDK) or SSH as the datapath transformation option for converting the virtual machines. This decision is determined by the number of virtual machines you intend to migrate and the capabilities of your infrastructure. The following table compares the options.
 
 [cols="1,2,2", options="header"]
 .VDDK and SSH comparison
