--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
@@ -1,14 +1,14 @@
 // Module included in the following assemblies:
-// assembly_Common_issues_and_mistakes.adoc
-[[Virtual_machine_migration_failure]]
-= Virtual machine migration failure
+// assembly_Troubleshooting.adoc
+[[Virtual_machine_migration_errors]]
+= Virtual machine migration errors
 
-If a specific virtual machine fails to migrate, check the xref:Migration_logs[migration logs] for these errors:
+If a virtual machine fails to migrate, check the following possible causes:
 
-* xref:IP_address_errors[IP address errors]
-* xref:VMware_environment_errors[VMware environment errors]
-* xref:RHV_VM_migration_failure[Red Hat Virtualization errors]
-* xref:OSP_VM_migration_failure[OpenStack Platform errors]
+* IP address errors (xref:IP_address_errors[])
+* VMware environment errors (xref:VMware_environment_errors[])
+* Red Hat Virtualization errors (xref:RHV_VM_migration_failure[])
+* OpenStack Platform errors (xref:OSP_VM_migration_failure[])
 
 [[IP_address_errors]]
 == IP address errors
