--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -3,37 +3,37 @@
 
 The Red Hat Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware{nbsp}5.5 (and later) to the following target environments:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] 4.3
+* Red Hat Virtualization 4.3
 +
-Red Hat Virtualization (RHV) is a virtualization platform built on Red Hat Enterprise Linux (RHEL{nbsp}7). Red Hat Virtualization enables you to manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+Red Hat Virtualization (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization documentation].)
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform] 13/14
+* Red Hat OpenStack Platform 13 and 14
 +
-OpenStack Platform enables you to build a private or public cloud on top of RHEL. OpenStack Platform is scaleable and fault-tolerant.
+OpenStack Platform enables you to create a scaleable, fault-tolerant, private or public cloud based on Red Hat Enterprise Linux. (For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform documentation].)
 +
 [NOTE]
 ====
 PLACEHOLDER: CNV migration and link to CNV doc.
 ====
 
-The migration process is performed with link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure.
+The migration process is performed with CloudForms, a user interface for managing the infrastructure. (For more information, see the link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms documentation].)
 
 The infrastructure migration has the following key steps:
 
-. xref:Planning_the_migration[Planning the migration]
+. Planning the migration (xref:Planning_the_migration[])
 +
-* Assessing your source and target environments to ensure that you have sufficient resources
-* Formulating strategies to minimize the impact on users
+* Assessing your source and target environments to ensure sufficient resources
+* Formulating strategies by following recommendations to minimize the impact on your users
 
-. xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
+. Preparing the environment for migration (xref:Preparing_the_environment_for_migration[])
 +
-* Preparing the source environment
-* Preparing the target environment
-* Configuring the conversion hosts (Red Hat Virtualization hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`)
+* Extending the source environment's network to the target environment and checking the source virtual machines for anything that might interfere with the migration process
+* Configuring the target environment's storage and networks, installing software, and adding the providers to CloudForms
+* Configuring the conversion hosts (Red Hat Virtualization hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`) in CloudForms
 
-. xref:Migrating_the_infrastructure[Migrating the infrastructure]
+. Migrating the infrastructure in CloudForms (xref:Migrating_the_infrastructure[])
 +
-* Mapping the source resources to the target infrastructure
+* Mapping the source and target infrastructures
 * Creating and running a migration plan (see xref:Vmware_to_rhv_migration_workflow[] or xref:Vmware_to_osp_migration_workflow[] for migration process details)
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
