--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
@@ -1,9 +1,9 @@
 // Module included in the following assemblies:
 // assembly_Migrating_the_infrastructure.adoc
 [id="Migration_plan_prerequisites"]
-= Migration plan prerequisites
+= Migration plan prerequisites that may apply
 
-The following prerequisites may apply to your migration plan:
+Check the following prerequisites to see whether they apply to your migration:
 
 * Creating a CSV file (xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[])
 ** Mandatory, if you are migrating source virtual machines that have been migrated in the past
@@ -13,10 +13,9 @@ The following prerequisites may apply to your migration plan:
 ** Mandatory, if you are migrating source virtual machines running RHEL or other Linux-based operating system
 
 * Adding Ansible playbooks to CloudForms (xref:Adding_ansible_playbooks_to_cloudforms[])
-** Mandatory, if you are creating a `RHEL premigration` Ansible playbook
-** Optional, for automated premigration and postmigration tasks
+** Mandatory, if you are using Ansible playbooks, including the `RHEL premigration` playbook, for premigration and postmigration tasks in the migration plan
 
-If these prerequisites do not apply, you can create a migration plan (xref:Creating_a_migration_plan[]).
+If these prerequisites do not apply, you can create a migration plan (xref:Creating_and_running_a_migration_plan[]).
 
 include::proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc[leveloffset=+1]
 include::proc_Creating_a_rhel_premigration_playbook.adoc[leveloffset=+1]
