--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -8,17 +8,17 @@ include::ref_Software_compatibility_requirements.adoc[]
 
 . Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 13 or later.
+. Install Red Hat OpenStack Platform 13 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform Director Installation and Usage]).
 
-. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the target instances to preserve the IP addresses of the source virtual machines.
+. Create provider networks for the target instances to preserve the IP addresses of the source virtual machines (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[Create a network] in the _Red Hat OpenStack Platform Networking Guide_).
 
-. Create a link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[project] for the conversion hosts and whatever destination projects you require for the target instances.
+. Create a project for the conversion hosts and whatever destination projects you require for the target instances (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[Create a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
 
-. Ensure that the `admin` user has link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[`member` and `admin` roles] in the conversion and destination projects.
+. Ensure that the `admin` user has `member` and `admin` roles in the conversion and destination projects (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[Edit a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
 
-. Set at least one link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[`volume type`] for the target block storage. Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
+. Set at least one `volume type` for the target block storage (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-create-volume[Create a Volume] and link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volume-retype[Changing a Volume’s Type (Volume Re-typing)] in the _Red Hat OpenStack Platform Storage Guide_). Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
 
-. Ensure that the target storage backends have sufficient space for the migrated virtual machines.
+. Ensure that the storage backends have sufficient space for the migrated virtual machines.
 
 . Configure security groups with the following ports enabled:
 
@@ -32,9 +32,9 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 
 . Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will map each source virtual machine to an existing flavor.
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.7 or later.
+. Install Red Hat CloudForms 4.7 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Installing Red Hat CloudForms on Red Hat OpenStack Platform]).
 
-. Add link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] as providers in CloudForms.
+. Add VMware and OpenStack Platform as providers in CloudForms (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms: Managing Providers_).
 +
 [NOTE]
 ====
@@ -43,11 +43,11 @@ Do not remove or change a provider before, during, or after migration because th
 
 . Ensure that the OpenStack Platform user (default is `cloud-user`) in CloudForms has `admin` privileges for the target projects.
 
-. Deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure. See xref:Deciding_how_many_conversion_hosts_to_create[].
+. Deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure (xref:Deciding_how_many_conversion_hosts_to_create[]).
 
 .Deploying OpenStack Platform conversion host instances
 
-. Navigate to the link:https://access.redhat.com/downloads/[Red Hat Customer Portal Product Downloads] site.
+. Navigate to link:https://access.redhat.com/downloads/[].
 . In the *A-Z* tab, click *Red Hat OpenStack Platform*.
 . Click the green *Download Latest* button to go to the OpenStack Platform download page.
 . Click the *Product Software* tab and download the `RHOSP V2V Image for Red Hat OpenStack Director (x86_64)`.
@@ -70,7 +70,7 @@ The OpenStack Platform 14 conversion appliance can be used with OpenStack Platfo
 For optimal performance:
 
 * Deploy the conversion hosts on more than one hypervisor.
-* Deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview. IS THIS STILL RELEVANT?
+* Deploy the conversion hosts on a compute node with nested virtualization enabled (see link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]). Nested virtualization is a technology preview. IS THIS STILL RELEVANT?
 
 
-You are ready to xref:Configuring_the_conversion_hosts[configure the conversion hosts].
+You are ready to configure the conversion hosts (xref:Configuring_the_conversion_hosts[]).
