--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -22,7 +22,7 @@ The maximum number of concurrent migrations for a conversion host should not exc
 +
 [NOTE]
 ====
-*Maximum concurrent migrations per conversion host* cannot be greater than *Maximum concurrent migrations per provider*.
+The value of *Maximum concurrent migrations per conversion host* is constrained so that it cannot be greater than *Maximum concurrent migrations per provider*.
 ====
 
 . Click *Apply*.
